fixed scss added header text overflow with ellipsis

--- a/DEM_MVC_UI/src/scss/common/base.scss
+++ b/DEM_MVC_UI/src/scss/common/base.scss
@@ -12,6 +12,7 @@ body {
   font-family: Arial,sans-serif;
   font-size: 1rem;
   line-height: 1.5;
+  margin: initial;
 }
 
 a:link,
