--- a/DEM_MVC_UI/src/scss/common/height-width.scss
+++ b/DEM_MVC_UI/src/scss/common/height-width.scss
@@ -1,3 +1,7 @@
 .heigth-inherit {
   height: inherit;
 }
+
+.width-100-percent {
+  width: 100%;
+}
