--- a/DEM_MVC_UI/src/scss/components/chapterItem.scss
+++ b/DEM_MVC_UI/src/scss/components/chapterItem.scss
@@ -13,6 +13,9 @@
 
     .chapter-header-title {
       padding: 0 $chapter-header-title-padding-horizontal;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
